# agentcore_trial

./: .gitignore  README.md
a2a/: README.md
a2a/airline/: README.md  main.py  pyproject.toml
a2a/airline/tools/: store.py
a2a/hotel/: README.md  main.py  pyproject.toml
a2a/hotel/tools/: store.py
a2a/shared/: cities.py
a2a/travel_agent/: README.md  main.py  pyproject.toml
agent_as_mcp/: README.md
agent_as_mcp/html_generator_mcp/: config.py
agent_eval/: EVAL_PLAN.md  PRD.md  PROGRESS.md  config.py  main.py  pyproject.toml  test.json
agent_eval/data/: __init__.py  builder.py  config.py  factory.py  seed.py  store.py
agent_eval/docs/: eval_cases.md  eval_multiturn.md  eval_quickstart.md  eval_tracking.md
agent_eval/eval/: experiment.py  run_eval.py  task_function.py
agent_eval/tools/: __init__.py  flight_tools.py
html_generator_mcp/: README.md  main.py  pyproject.toml
mcp_as_tool/research_agent/: __init__.py  pyproject.toml
research_agent/: README.md  main.py  pyproject.toml
research_agent/tools/: duckduckgo_search.py  mcp_gateway.py
